# kubernetes-multicluster

cmd/multi-cluster/: .dockerignore  CMakeLists.txt  Dockerfile  configHelper.cpp  configHelper.hpp  create_or_update_deployment.py  deploy.yaml  k3s.Dockerfile  main.cpp  remove_deployments.py  scheduler.cpp  scheduler.hpp  test.cpp  updateLocal.cpp
cmd/multi-cluster/protobuf/rpc/: message.proto
cmd/multi-cluster/samples/: k8s_config.conf
cmd/multi-cluster/tools/: build.sh  grpc_cpp.sh
